  which determines on which revisions the updated marker flag is shown
  (in Recent Changes and Page History views). With the TS-improvement,
  the (notification) time information is no longer exact for the single
  user.

v3.51
* integrated the RSS feed reader extension from
  http://meta.wikipedia.org/wiki/User:Mafs/RSS
* changed version number to MediaWiki1.5rc2

v3.50
* updated to MediaWiki1.5rc1 CVS 200508240100 = MediaWiki1.5rc2
* (bug  3211) e-mails miss the date (fixed)
* reestablished the possibility to have fixed server address part in URLs
  in enotifs; see page [[MediaWiki:enotif_server]] which has {{SERVER}} as
  default, but can be changed to http://www.domain.tld or the like

v3.49b
* undefined property in Special:Recentchangeslinked (solved)

v3.49
* maintenance release CVS update 200508172345

v3.48b
* (bug 3162) undefined variable and property in mediawiki fixed

v3.48a
* bug in UserMailer line 301 (fixed)
* new defaultsettings:
  $wgMaxCredits = 1

v3.48
* maintenance release CVS update 200508131900
* user- and user-talk pages were not automatically added to the
  watchlist, which also influenced the correct display of newmessage
  marker, when both pages had changes (solved)
* upgraded to final release of FCKeditor 2.0 http://www.fckeditor.net

v3.47
* maintenance release CVS update 200508112300
* undefined variable in SkinTemplate.php (solved)
* changed back some forgotten variable names $wgEmailConfirmation to
  $wgEmailAuthentication to get back in line with MediaWiki

v3.46
* maintenance release CVS update 200508110600
* email addresses of sysops, bureaucrats and developers are
  automatically authenticated as they are entered in user preferences
  (can be disabled, so that every address must be authenticated)
  (functionality was broken, is repaired now)
* updated marker was shown twice in enhanced recent changes view (solved)

v3.45a
* user option updated marker was ignored (solved)
* undefined variabled in UserMailer (solved)

v3.45