@@ -55,6 +55,8 @@ define('MAG_REVISIONID',		40);
 define('MAG_SCRIPTPATH',		41);
 define('MAG_SERVERNAME',		42);
 define('MAG_NUMBEROFFILES',		43);
+define('MAG_SERVER_EXTERN',		44);
+
 
 $wgVariableIDs = array(
 	MAG_CURRENTMONTH,
@@ -70,6 +72,7 @@ $wgVariableIDs = array(
 	MAG_SITENAME,
 	MAG_SERVER,
 	MAG_SERVERNAME,
+	MAG_SERVER_EXTERN,
 	MAG_SCRIPTPATH,
 	MAG_PAGENAME,
 	MAG_PAGENAMEE,
