@@ -248,6 +248,7 @@ $wgLanguageNamesEn =& $wgLanguageNames;
 	MAG_LOCALURL             => array( 0,    'LOCALURL:'              ),
 	MAG_LOCALURLE            => array( 0,    'LOCALURLE:'             ),
 	MAG_SERVER               => array( 0,    'SERVER'                 ),
+	MAG_SERVER_EXTERN        => array( 1,    'SERVER_EXTERN'          ),
 	MAG_SERVERNAME           => array( 0,    'SERVERNAME'             ),
 	MAG_SCRIPTPATH           => array( 0,    'SCRIPTPATH'             ),
 	MAG_GRAMMAR              => array( 0,    'GRAMMAR:'               ),
@@ -285,6 +286,8 @@ Note to translators: Do not include this message in the language files you
 submit for inclusion in MediaWiki, it should always be inherited from the
 parent class in order maintain consistency across languages.
 */
+
+'server_extern'	=> '{{SERVER}}',
 'sidebar' => '
 * navigation
 ** mainpage|mainpage
@@ -1292,7 +1295,6 @@ at the bottom of the screen (deleting a content page also deletes the accompanyi
 'enotif_newpagetext'		=> 'This is a new page.',
 'changed'			=> 'changed',
 'created'			=> 'created',
-'enotif_server' 		=> '{{SERVER}}',
 'enotif_subject' 		=> '{{SITENAME}} page $PAGETITLE has been $CHANGEDORCREATED by $PAGEEDITOR',
 'enotif_to' 			=> '$WATCHINGUSERNAME_QP <$WATCHINGUSEREMAILADDR>',
 'enotif_lastvisited' 		=> 'See $1 for all changes since your last visit.',
@@ -1314,10 +1316,10 @@ There will be no other notifications in case of further changes unless you visit
 
 --
 To change your watchlist settings, visit
-$SERVER{{localurl:Special:Watchlist/edit}}
+{{SERVER_EXTERN}}{{localurl:Special:Watchlist/edit}}
 
 Feedback and further assistance:
-$SERVER{{localurl:Help:Contents}}',
+{{SERVER_EXTERN}}{{localurl:Help:Contents}}',
 
 # Delete/protect/revert
 #
